Regenerate from joml-nextgen@016ede9: fix: third audit round — atan2 angle forms, ray/sphere perpendicular test, stable rotateTo/rotateAround/barycentric, far=∞ rays, bounds-checked Unsafe copies, SIMD operand aliasing, integer lanes, Unsafe backend probing, javadoc
Source: https://github.com/httpdigest/joml-nextgen/commit/016ede9ee49499b0e54a16d83731558cfc81a54c